--- a/extension/package.json
+++ b/extension/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0",
+    "@types/chrome": "^0.1.4",
     "typescript": "^5.4.0",
     "vite": "^5.0.0"
   },
