feat: Complete PhishGuard Lite system implementation
- Add comprehensive phishing detection API with scoring system
- Implement admin dashboard with React/TypeScript
- Add browser extension with content script and options
- Create test scripts and demonstration pages
- Add S3 bucket policies for data storage
- Update AWS SAM template and OpenAPI specification
- All systems tested and operational

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -18,6 +18,11 @@ Resources:
       CodeUri: .
       Handler: app.lambda_handler
       Events:
+        RootApi:
+          Type: Api
+          Properties:
+            Path: /
+            Method: ANY
         Api:
           Type: Api
           Properties:
