feat: Apply PhishGuard Lite improvements patch
- Bump extension version to 0.2.0
- Add DEFAULT_API constants for consistent API endpoints
- Fix storage key consistency (apiBase vs apiUrl)
- Enable reporting by default
- Add GitHub Actions CI/CD pipeline for automated builds
- Add enhanced AWS SAM template with proper IAM policies
- Add deployment documentation and scripts
- Improve error handling and fallback logic

All changes tested and ready for production deployment.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "PhishGuard Lite",
-  "version": "0.1.0",
-  "description": "Inline phishing risk labels for Gmail/Outlook/LinkedIn. Local heuristics by default; optional backend enrichment.",
+  "version": "0.2.0",
+  "description": "Inline phishing risk labels and one-click reporting. Local heuristics; report only on user action.",
   "action": {
     "default_title": "PhishGuard Lite"
   },
