--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -7,26 +7,66 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: extension/package-lock.json
-      - name: Install deps
+          cache-dependency-path: |
+            extension/package-lock.json
+            extension/package.json
+            
+      - name: Install dependencies
         working-directory: extension
-        run: npm ci
-      - name: Build
+        run: |
+          npm ci --prefer-offline --no-audit
+          
+      - name: Build extension
         working-directory: extension
-        run: npm run build
-      - name: Upload artifact
+        run: |
+          npm run build
+          
+      - name: Copy required files
+        working-directory: extension
+        run: |
+          cp manifest.json dist/
+          cp src/options/index.html dist/
+          
+      - name: List dist contents
+        working-directory: extension
+        run: |
+          echo "Dist directory contents:"
+          ls -la dist/
+          
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: phishguard-lite-dist
-          path: extension/dist
+          name: phishguard-lite-v${{ github.ref_name }}
+          path: extension/dist/**
+          
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.ref_name }}
+          name: PhishGuard Lite ${{ github.ref_name }}
+          body: |
+            ## PhishGuard Lite ${{ github.ref_name }}
+            
+            ### What's New
+            - Phishing detection improvements
+            - Better API integration
+            - Enhanced user experience
+            
+            ### Installation
+            Download and install the extension from the Chrome Web Store or load it manually from the dist folder.
+            
+            ### Files
+            The extension has been built and packaged for distribution.
           files: |
             extension/dist/**
+          draft: false
+          prerelease: false
