--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -3,70 +3,61 @@ on:
   push:
     tags:
       - 'v*'
+
+# Needed so the release step can upload assets
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: extension
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: extension/package-lock.json
-          
-      - name: Install dependencies
-        working-directory: extension
+          # Works with or without a lockfile
+          cache-dependency-path: |
+            extension/package-lock.json
+            extension/package.json
+
+      - name: Print env & scripts
         run: |
-          echo "Current directory: $(pwd)"
-          echo "Files in current directory:"
-          ls -la
-          echo "Installing dependencies..."
-          npm ci
-          
-      - name: Build extension
-        working-directory: extension
+          node -v
+          npm -v
+          test -f package.json && cat package.json || true
+          test -f package-lock.json && echo "lockfile present" || echo "no lockfile"
+
+      - name: Install deps
         run: |
-          echo "Building extension..."
-          npm run build
-          
-      - name: Copy required files
-        working-directory: extension
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
+
+      - name: Build
+        run: npm run build --if-present
+
+      - name: Package ZIP
         run: |
-          echo "Copying required files to dist..."
-          cp manifest.json dist/
-          cp src/options/index.html dist/
-          echo "Dist directory contents:"
-          ls -la dist/
-          
-      - name: Upload build artifact
+          cd dist
+          zip -r ../phishguard-lite-${GITHUB_REF_NAME}.zip .
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: phishguard-lite-v${{ github.ref_name }}
-          path: extension/dist/**
-          
+          name: phishguard-lite-${{ github.ref_name }}
+          path: extension/phishguard-lite-${{ github.ref_name }}.zip
+
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
-          name: PhishGuard Lite ${{ github.ref_name }}
-          body: |
-            ## PhishGuard Lite ${{ github.ref_name }}
-            
-            ### What's New
-            - Phishing detection improvements
-            - Better API integration
-            - Enhanced user experience
-            
-            ### Installation
-            Download and install the extension from the Chrome Web Store or load it manually from the dist folder.
-            
-            ### Files
-            The extension has been built and packaged for distribution.
-          files: |
-            extension/dist/**
-          draft: false
-          prerelease: false
+          files: extension/phishguard-lite-${{ github.ref_name }}.zip
