feat: Complete PhishGuard Lite backend deployment and extension fixes
- Backend:
  * Updated requirements.txt with S3 integration dependencies
  * Enhanced admin-dashboard.html with robust error handling and demo mode
  * Updated AWS SAM template for proper Lambda deployment
  * Integrated S3 storage for phishing reports

- Extension:
  * Fixed manifest.json paths for compiled JavaScript files
  * Enhanced options page with robust save functionality and error handling
  * Improved CSS styling for status messages
  * Fixed extension loading and options page issues

- Infrastructure:
  * AWS SAM deployment configuration
  * S3 integration for persistent report storage
  * Admin API endpoints for report management

This commit represents a complete working system with:
- Functional browser extension with working options page
- Backend API with S3 storage integration
- Admin dashboard for report management
- AWS deployment infrastructure

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,10 +21,10 @@
     "https://*/*"
   ],
   "background": {
-    "service_worker": "src/background.ts",
+    "service_worker": "background.js",
     "type": "module"
   },
-  "options_page": "src/options/index.html",
+  "options_page": "index.html",
   "content_scripts": [
     {
       "matches": [
@@ -33,7 +33,7 @@
         "https://www.linkedin.com/*"
       ],
       "js": [
-        "src/content.ts"
+        "content.js"
       ],
       "run_at": "document_idle"
     }
