--- a/backend/aws-sam/template.yaml
+++ b/backend/aws-sam/template.yaml
@@ -9,29 +9,6 @@ Parameters:
     Description: Name for the S3 bucket to store phishing reports
 
 Resources:
-  # S3 Bucket for storing phishing reports
-  ReportsBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: !Ref S3BucketName
-      VersioningConfiguration:
-        Status: Enabled
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        BlockPublicPolicy: true
-        IgnorePublicAcls: true
-        RestrictPublicBuckets: true
-      BucketEncryption:
-        ServerSideEncryptionConfiguration:
-          - ServerSideEncryptionByDefault:
-              SSEAlgorithm: AES256
-      LifecycleConfiguration:
-        Rules:
-          - Id: DeleteOldReports
-            Status: Enabled
-            ExpirationInDays: 365
-            NoncurrentVersionExpirationInDays: 30
-
   # IAM Role for Lambda function
   PhishGuardFunctionRole:
     Type: AWS::IAM::Role
@@ -57,8 +34,8 @@ Resources:
                   - s3:DeleteObject
                   - s3:ListBucket
                 Resource:
-                  - !Sub '${ReportsBucket}/*'
-                  - !Ref ReportsBucket
+                  - !Sub 'arn:aws:s3:::phishguard-reports-1755667751/*'
+                  - !Sub 'arn:aws:s3:::phishguard-reports-1755667751'
 
   # Lambda function for the API
   PhishGuardFunction:
@@ -71,13 +48,13 @@ Resources:
       MemorySize: 512
       Environment:
         Variables:
-          S3_BUCKET: !Ref ReportsBucket
-          AWS_REGION: !Ref AWS::Region
+          S3_BUCKET: phishguard-reports-1755667751
       Role: !GetAtt PhishGuardFunctionRole.Arn
       Events:
         Api:
           Type: Api
           Properties:
+            RestApiId: !Ref PhishGuardApi
             Path: /{proxy+}
             Method: ANY
 
@@ -90,23 +67,16 @@ Resources:
         AllowMethods: "'*'"
         AllowHeaders: "'*'"
         AllowOrigin: "'*'"
-      GatewayResponses:
-        DEFAULT_4XX:
-          ResponseParameters:
-            gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
-        DEFAULT_5XX:
-          ResponseParameters:
-            gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
 
 Outputs:
   ApiUrl:
-    Description: "API Gateway endpoint URL"
+    Description: "API Gateway endpoint URL for PhishGuard Lite"
     Value: !Sub "https://${PhishGuardApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
-  
-  S3BucketName:
-    Description: "S3 bucket for storing phishing reports"
-    Value: !Ref ReportsBucket
+    Export:
+      Name: !Sub "${AWS::StackName}-ApiUrl"
   
   LambdaFunctionArn:
-    Description: "Lambda function ARN"
+    Description: "Lambda Function ARN"
     Value: !GetAtt PhishGuardFunction.Arn
+    Export:
+      Name: !Sub "${AWS::StackName}-LambdaFunctionArn"
