--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
+# Pure Python packages for AWS Lambda compatibility
+fastapi==0.95.2
+uvicorn[standard]==0.22.0
+pydantic==1.10.7
 requests==2.31.0
 boto3==1.34.0
 mangum==0.17.0
