🔒 Security: Remove hardcoded AWS credentials and sensitive data
- Replace hardcoded API Gateway URLs with placeholder values
- Remove AWS account IDs and specific resource names
- Update documentation to use generic placeholders
- Add comprehensive .gitignore to exclude build artifacts
- Clean up test files to avoid exposing production URLs
- Ensure no sensitive information is committed to public repo

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -37,5 +37,8 @@
       ],
       "run_at": "document_idle"
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
