🔧 Fix ZIP packaging for Chrome Web Store compatibility
- Fix ZIP structure to put manifest.json at root level
- Chrome Web Store requires files at ZIP root, not in subfolders
- Use proper zip command with . -x '.*' for correct structure
- Ready for Chrome Web Store submission

--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -47,8 +47,9 @@ jobs:
 
       - name: Package ZIP
         run: |
+          # Create ZIP with files at root level (Chrome Web Store requirement)
           cd dist
-          zip -r ../phishguard-lite-${GITHUB_REF_NAME}.zip .
+          zip -r ../phishguard-lite-${GITHUB_REF_NAME}.zip . -x ".*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
