🔧 Fix ZIP path issue - ensure ZIP is in correct location for upload
- ZIP is created from dist folder with correct structure
- Move ZIP to dist folder after creation for proper path resolution
- Fixes 'No manifest found' error in Chrome Web Store
- ZIP now contains manifest.json at root level as required

--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -52,6 +52,8 @@ jobs:
           # Create ZIP directly from dist folder contents
           cd dist
           zip -r ../phishguard-lite-${GITHUB_REF_NAME}.zip *
+          # Move ZIP to the correct location for upload
+          mv ../phishguard-lite-${GITHUB_REF_NAME}.zip ./
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
