--- a/extension/package.json
+++ b/extension/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:full": "./build.sh",
     "preview": "vite preview"
   },
   "devDependencies": {
