--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "PhishGuard Lite",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Inline phishing risk labels and one-click reporting. Local heuristics; report only on user action.",
   "action": {
     "default_title": "PhishGuard Lite"
@@ -12,13 +12,12 @@
     "128": "icons/icon128.png"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "activeTab",
+    "scripting"
   ],
   "host_permissions": [
-    "https://mail.google.com/*",
-    "https://outlook.office.com/*",
-    "https://www.linkedin.com/*",
-    "https://*/*"
+    "https://phishguard.cyphersway.com/*"
   ],
   "background": {
     "service_worker": "background.js",
