Fix AWS SAM deployment configuration and custom domain setup
- Updated samconfig.toml: Fixed resolve_s3 conflict and stack name
- Updated template.yaml: Fixed custom domain resource naming conflicts
- Resolved CloudFormation deployment issues
- Custom domain phishguard.cyphersway.com now working correctly
- Admin dashboard API endpoints functional

--- a/backend/samconfig.toml
+++ b/backend/samconfig.toml
@@ -2,12 +2,14 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "phishguard-backend"
+stack_name = "phishguard-lite-backend"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-xyf9zlnrqutn"
 s3_prefix = "phishguard-backend"
 region = "us-east-1"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "Environment=\"prod\""
+parameter_overrides = "CustomDomainName=\"\""
 image_repositories = []
 profile = "PhishGuard"
+resolve_s3 = false
+disable_rollback = true
