🔒 SECURITY: Add PRIVATE_DOCUMENTATION to .gitignore
- Exclude confidential documentation from public repository
- Ensure sensitive information is never committed
- Maintain security best practices for private data

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ config.json
 .env.local
 .env.production
 
+# Private documentation (CONFIDENTIAL)
+PRIVATE_DOCUMENTATION/
+
 # Test files (optional - remove if you want to keep them)
 test-*.html
 *-test.html
